refactor: Improve appsettings.json for database connection
- Update the ConnectionStrings to use placeholders for server and database names
- Remove sensitive information from the DefaultConnection string

Closes #123

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,9 @@
   },
   "AllowedHosts": "*",
 
+  // Change the ConnectionsStrings to your own server and database name
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:studentdb.database.windows.net,1433;Initial Catalog=StudentPortaldb;Persist Security Info=False;User ID=samhith;Password=Password@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+    "DefaultConnection": "Server=<your_server_name>;Database=<your_database_name>;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
   
 }
